added chat feature

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!-- <!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/Final Logo 4.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Videocam App</title>
   </head>
@@ -10,44 +10,109 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
-</html> -->
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <title>Agora Chat Examples</title>
-  <script type="module" src="\src\main.js"></script>
-  <!-- <link rel="stylesheet" href="style.css" type="text/css" /> -->
-</head>
-
-<body>
-  <h2>Agora Chat Examples</h2>
-  <form id="loginForm">
-    <div class="input-field">
-      <label>User ID</label>
-      <input type="text" placeholder="User ID" id="userID">
-    </div>
-    <div class="input-field">
-      <label>Token</label>
-      <input type="text" placeholder="Token" id="token">
-    </div>
-    <div>
-      <button type="button" id="login">Login</button>
-      <button type="button" id="logout">Logout</button>
-    </div>
-    <div class="input-field">
-      <label>Peer user ID</label>
-      <input type="text" placeholder="Peer user ID" id="peerId">
-    </div>
-    <div class="input-field">
-      <label>Peer Message</label>
-      <input type="text" placeholder="Peer message" id="peerMessage">
-      <button type="button" id="send_peer_message">send</button>
-    </div>
-  </form>
-  <hr/>
-  <div id="log"></div>
-</body>
-
 </html>
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Video Cam</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #fff7ee;
+        }
+
+        header {
+            background-color: #fff7ee;
+            color: orange;
+            text-align: center;
+            padding: 1rem;
+        }
+
+        .login-container {
+            max-width: 400px;
+            margin: 50px auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        input {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            box-sizing: border-box;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #555;
+        }
+
+        .social-buttons {
+            margin-top: 15px;
+        }
+
+        .social-buttons button {
+            width: 48%;
+            margin-right: 4%;
+            padding: 10px;
+        }
+
+        footer {
+            text-align: center;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>VideoCam</h1>
+    </header>
+
+    <div class="login-container">
+        <form action="your_backend_login_endpoint" method="post">
+            <label for="username">Username/Email:</label>
+            <input type="text" id="username" name="username" required>
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+
+            <button type="submit">Login</button>
+        </form>
+
+        <p>Don't have an account? <a href="registration.html">Register here</a>.</p>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 VideoCam. All rights reserved.</p>
+    </footer>
+
+    <script>
+        function handleSocialLogin(provider) {
+            // Implement social media login logic here
+            alert('Social login with ' + provider);
+        }
+    </script>
+
+</body>
+</html> -->
+
+
